# synthwave

./: .bumpver.toml  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: __main__.py
app/cli/: cli.py  parser.py
app/cli/commands/: check.py  download.py  split.py  version.py
app/schemas/: __init__.py  track_data.py  track_list.py
app/services/: __init__.py  audio_splitter.py  audio_tagger.py  image_utils.py  track_list_parser.py
synthwave/: __main__.py
synthwave/cli/: cli.py  parser.py
synthwave/cli/commands/: clean.py  download.py  split.py  version.py
synthwave/cli/utils/: __init__.py  command_help.py  formatter.py
synthwave/schemas/: __init__.py  track_list.py
synthwave/services/: __init__.py  audio_splitter.py  audio_tagger.py  track_list_parser.py
tests/: all_process.py  ffmpg_splitter.py  track_list_parser.py
